--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/waves.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/titles.css">
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+
+    <!-- FLAGS -->
+    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
+
+    <!-- IMAGES -->
+    <link rel="stylesheet" href="/static/images" type="image">
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+            integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+            crossorigin="anonymous"></script>
+
+    <!-- WAVES -->
+    <script src="/static/js/waves.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
+            type="text/javascript"></script>
+
+    <!-- ANIMATION -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
     <title>DiPHONE</title>
 </head>
+
 <body>
-<h1>hello</h1>
+
+{% block content %}
+
+<canvas id="waves"></canvas>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+<div class="centerIndex">
+
+    <!-- LOGO -->
+    <img class="mainLogo animate__animated animate__zoomInDown img-fluid"
+         src="/static/images/info/diphone_logo_mini.png"
+         alt="logo" style="animation-delay: 1s; padding: 10px">
+    <p class="animate__animated animate__slideInDown" style="margin-top: 100px; animation-delay: 1s">WYBIERZ JĘZYK </p>
+
+<!--    <p>/-->
+<!--        CHOOSE-->
+<!--        LANGUAGE / ВИБЕРІТЬ МОВУ</p>-->
+    <div class="flagStyle">
+
+        <!-- PL FLAG -->
+        <div class="flagStyle-2 animate__animated animate__zoomInLeft" style="animation-delay: 2s">
+            <form action="/glowna">
+                <a href="/glowna"><i class="em em-flag-pl" aria-role="presentation"
+                                           aria-label="Poland Flag"></i></a>
+            </form>
+        </div>
+
+<!--        &lt;!&ndash; ENG FLAG &ndash;&gt;-->
+<!--        <div class="flagStyle-2 animate__animated animate__zoomIn" style="animation-delay: 3s">-->
+<!--            <form action="/en_main_page">-->
+<!--                <a href="/en_main_page"><i class="em em-gb" aria-role="presentation"-->
+<!--                                           aria-label="United Kingdom Flag"></i></a>-->
+<!--            </form>-->
+
+<!--        </div>-->
+
+<!--        &lt;!&ndash; UE FLAG &ndash;&gt;-->
+<!--        <div class="flagStyle-2 animate__animated animate__zoomInRight" style="animation-delay: 2s">-->
+<!--            <form action="/ue_main_page">-->
+<!--                <a href="/ue_main_page"><i class="em em-flag-ua" aria-role="presentation"-->
+<!--                                           aria-label="Ukraine Flag"></i></a>-->
+<!--            </form>-->
+
+<!--        </div>-->
+    </div>
+</div>
+
+{% endblock %}
+
 </body>
-</html>
