--- a/templates/pl_layout.html
+++ b/templates/pl_layout.html
@@ -42,7 +42,7 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="pl_main_page"><img src="/static/images/info/diphone_logo.png"
+        <a class="navbar-brand" href="glowna"><img src="/static/images/info/diphone_logo.png"
                                                          style="height: 60px; width: 90px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,13 +52,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="/about_us_pl">O NAS</a>
+                    <a class="nav-link" href="/o_nas">O NAS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">DLA CIEBIE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/for_company_pl">DLA FIRM</a>
+                    <a class="nav-link" href="#">DLA FIRM</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">CENNIK</a>
@@ -73,7 +73,7 @@
                     <a class="nav-link" href="#">SPRZEDAŻ</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact_us_pl">KONTAKT</a>
+                    <a class="nav-link" href="/kontakt">KONTAKT</a>
                 </li>
 
             </ul>
