--- a/templates/pl_layout.html
+++ b/templates/pl_layout.html
@@ -34,7 +34,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <title>4PHONE</title>
+    <title>DiPHONE</title>
 </head>
 
 <body>
