--- a/static/css/titles.css
+++ b/static/css/titles.css
@@ -10,6 +10,21 @@
     text-shadow: rgb(0, 0, 0) 2px 2px 2px;
 }
 
+.h2-titles {
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    padding: 10px;
+}
+
+.h2-titles-shadow {
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    padding: 10px;
+    text-shadow: rgb(153, 255, 0) 2px 2px 2px;
+}
+
 .h3-titles {
     font-family: 'Oswald', sans-serif;
     text-align: center;
