--- a/templates/pl_layout.html
+++ b/templates/pl_layout.html
@@ -58,7 +58,7 @@
                     <a class="nav-link" href="#">DLA CIEBIE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">DLA FIRM</a>
+                    <a class="nav-link" href="/dla_firm">DLA FIRM</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">CENNIK</a>
@@ -105,7 +105,7 @@
             <div class="col">
 
                 <small>
-                    <img src="/static/images/info/diphone_logo.png" alt="logo" height="20" width="40">
+                    <img src="/static/images/info/diphone_logo.png" alt="logo" height="20" width="30">
                     &#169; Własność
                     <strong style="color: grey"> ● </strong>
                     Wszelkie prawa zastrzeżone
