--- a/templates/index.html
+++ b/templates/index.html
@@ -48,15 +48,15 @@
 
 {% block content %}
 
-<canvas id="waves"></canvas>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<!--<canvas id="waves"></canvas>-->
+<!--<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>-->
 
 <div class="centerIndex">
 
     <!-- LOGO -->
     <img class="mainLogo animate__animated animate__zoomInDown img-fluid"
          src="/static/images/info/diphone_logo_mini.png"
-         alt="logo" style="animation-delay: 1s; padding: 10px">
+         alt="logo" style="padding: 10px">
     <p class="animate__animated animate__slideInDown" style="margin-top: 100px; animation-delay: 1s">WYBIERZ JĘZYK </p>
 
 <!--    <p>/-->
