--- a/templates/kontakt.html
+++ b/templates/kontakt.html
@@ -25,7 +25,7 @@
                 <img class="animate__animated animate__zoomInLeft" style="animation-delay: 500ms"
                      src="/static/images/contact_us/mail.png">
                 <p class="p-par-contact"><strong>EMAIL</strong><br>
-                    <a href="mailto:4phonelegionowo@gmail.com" class="tel-mail">kontakt@diphone.pl</a>
+                    <a href="mailto:kontakt@diphone.pl" class="tel-mail">kontakt@diphone.pl</a>
                 </p>
             </div>
         </div>
