--- a/templates/kontakt.html
+++ b/templates/kontakt.html
@@ -52,7 +52,7 @@
                 <img class="animate__animated animate__zoomInUp" style="animation-delay: 2500ms"
                      src="/static/images/contact_us/facebook.png">
                 <br>
-                <p class="p-par-contact"><a href="https://www.facebook.com/4PhoneLegionowo" target="_blank"
+                <p class="p-par-contact"><a href="https://www.facebook.com/diphoneservice" target="_blank"
                                             class="tel-mail"><strong>ODWIEDŹ NAS NA FACEBOOK'u</strong></a></p>
             </div>
 
