--- a/templates/pl_layout.html
+++ b/templates/pl_layout.html
@@ -43,7 +43,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="glowna"><img src="/static/images/info/diphone_logo.png"
-                                                         style="height: 60px; width: 90px"></a>
+                                                   style="height: 60px; width: 90px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -60,9 +60,42 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/dla_firm">DLA FIRM</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">CENNIK</a>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="/cennik" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        CENNIK NAPRAW
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">HUAWEI
+                            <img class="animate__animated animate__zoomInRight"
+                                 style="animation-delay: 100ms; height: 20px"
+                                 src="/static/images/main_page/logo/huawei.png"></a>
+                        <a class="dropdown-item" href="#">SAMSUNG
+                            <img class="animate__animated animate__zoomInRight"
+                                 style="animation-delay: 200ms; height: 20px"
+                                 src="/static/images/main_page/logo/samsung.png"></a>
+                        <a class="dropdown-item" href="#">iPHONE
+                            <img class="animate__animated animate__zoomInRight"
+                                 style="animation-delay: 300ms; height: 20px"
+                                 src="/static/images/main_page/logo/apple.png"></a>
+                        <a class="dropdown-item" href="#">XIOMI
+                            <img class="animate__animated animate__zoomInRight"
+                                 style="animation-delay: 400ms; height: 20px"
+                                 src="/static/images/main_page/logo/xiaomi.png"></a>
+                        <a class="dropdown-item" href="#">SONY
+                            <img class="animate__animated animate__zoomInRight"
+                                 style="animation-delay: 500ms; height: 20px"
+                                 src="/static/images/main_page/logo/sony.png"></a>
+                        <a class="dropdown-item" href="#">LG
+                            <img class="animate__animated animate__zoomInRight"
+                                 style="animation-delay: 600ms; height: 20px"
+                                 src="/static/images/main_page/logo/lg.png"></a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/cennik-pozostale">POZOSTAŁE</a>
+                    </div>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#">SKUP</a>
                 </li>
@@ -78,11 +111,11 @@
 
             </ul>
 
-<!--            <a href="/en_main_page" style="padding: 5px"><i class="nav-item em em-gb" aria-role="presentation"-->
-<!--                                                            aria-label="United Kingdom Flag"></i></a>-->
+            <!--            <a href="/en_main_page" style="padding: 5px"><i class="nav-item em em-gb" aria-role="presentation"-->
+            <!--                                                            aria-label="United Kingdom Flag"></i></a>-->
 
-<!--            <a href="/ue_main_page" style="padding: 5px"><i class="em em-flag-ua" aria-role="presentation"-->
-<!--                                                            aria-label="Ukraine Flag"></i></a>-->
+            <!--            <a href="/ue_main_page" style="padding: 5px"><i class="em em-flag-ua" aria-role="presentation"-->
+            <!--                                                            aria-label="Ukraine Flag"></i></a>-->
 
         </div>
     </div>
@@ -112,7 +145,7 @@
                     <strong style="color: grey"> ● </strong>
                     Projekt
                     <img src="/static/images/info/ik_logo.png" alt="logo" height="20" width="20">
-                    <p> </p>
+                    <p></p>
                 </small>
             </div>
         </div>
