create price lists

--- a/templates/cennik.html
+++ b/templates/cennik.html
@@ -1,10 +1,62 @@
 {% extends "pl_layout.html" %}
 
 {% block content %}
-<h1 class="h1-titles mb-3">CENNIK</h1>
+<h1 class="h1-titles mb-3">CENNIK NAPRAW</h1>
+<h2 class="h2-titles-shadow">WYBIERZ MARKĘ TELEFONU: </h2>
+<div class="container">
+    <div class="row">
 
+        <div class="col-sm-2">
+            <a href="/cennik-huawei">
+                <img class="animate__animated animate__zoomInRight"
+                     style="animation-delay: 100ms; height: 50px"
+                     src="/static/images/main_page/logo/huawei.png"></a>
+        </div>
 
+        <div class="col-sm-2">
+            <a href="/cennik-samsung">
+                <img class="animate__animated animate__zoomInRight"
+                     style="animation-delay: 300ms; height: 50px"
+                     src="/static/images/main_page/logo/samsung.png"></a>
+        </div>
 
+        <div class="col-sm-2">
+            <a href="/cennik-iphone">
+                <img class="animate__animated animate__zoomInRight"
+                     style="animation-delay: 500ms; height: 50px"
+                     src="/static/images/main_page/logo/apple.png"></a>
+        </div>
+
+        <div class="col-sm-2">
+            <a href="/cennik-xiaomi">
+                <img class="animate__animated animate__zoomInRight"
+                     style="animation-delay: 700ms; height: 50px"
+                     src="/static/images/main_page/logo/xiaomi.png"></a>
+        </div>
+
+        <div class="col-sm-2">
+            <a href="/cennik-sony">
+                <img class="animate__animated animate__zoomInRight"
+                     style="animation-delay: 900ms; height: 50px"
+                     src="/static/images/main_page/logo/sony.png"></a>
+        </div>
+
+        <div class="col-sm-2">
+            <a href="/cennik-lg">
+                <img class="animate__animated animate__zoomInRight"
+                     style="animation-delay: 1100ms; height: 50px"
+                     src="/static/images/main_page/logo/lg.png"></a>
+        </div>
+
+        <br><br>
+
+        <div class="row">
+            <div class="col-sm-12">
+                <h4 class="h4-titles-shadow"><a href="/cennik-pozostale" style="color: #0b0c10">INNE MODELE</a></h4>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <!-- FOOTER -->
