--- a/templates/pl_layout.html
+++ b/templates/pl_layout.html
@@ -67,27 +67,27 @@
                         CENNIK NAPRAW
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">HUAWEI
+                        <a class="dropdown-item" href="/cennik-huawei">HUAWEI
                             <img class="animate__animated animate__zoomInRight"
                                  style="animation-delay: 100ms; height: 20px"
                                  src="/static/images/main_page/logo/huawei.png"></a>
-                        <a class="dropdown-item" href="#">SAMSUNG
+                        <a class="dropdown-item" href="/cennik-samsung">SAMSUNG
                             <img class="animate__animated animate__zoomInRight"
                                  style="animation-delay: 200ms; height: 20px"
                                  src="/static/images/main_page/logo/samsung.png"></a>
-                        <a class="dropdown-item" href="#">iPHONE
+                        <a class="dropdown-item" href="/cennik-iphone">iPHONE
                             <img class="animate__animated animate__zoomInRight"
                                  style="animation-delay: 300ms; height: 20px"
                                  src="/static/images/main_page/logo/apple.png"></a>
-                        <a class="dropdown-item" href="#">XIOMI
+                        <a class="dropdown-item" href="/cennik-xiaomi">XIAOMI
                             <img class="animate__animated animate__zoomInRight"
                                  style="animation-delay: 400ms; height: 20px"
                                  src="/static/images/main_page/logo/xiaomi.png"></a>
-                        <a class="dropdown-item" href="#">SONY
+                        <a class="dropdown-item" href="/cennik-sony"">SONY
                             <img class="animate__animated animate__zoomInRight"
                                  style="animation-delay: 500ms; height: 20px"
                                  src="/static/images/main_page/logo/sony.png"></a>
-                        <a class="dropdown-item" href="#">LG
+                        <a class="dropdown-item" href="/cennik-lg">LG
                             <img class="animate__animated animate__zoomInRight"
                                  style="animation-delay: 600ms; height: 20px"
                                  src="/static/images/main_page/logo/lg.png"></a>
