--- a/static/css/titles.css
+++ b/static/css/titles.css
@@ -39,6 +39,13 @@
     padding: 10px;
 }
 
+.h4-titles-shadow {
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    padding: 10px;
+    text-shadow: rgb(153, 255, 0) 2px 2px 2px;
+}
 
 .h5-titles {
     font-family: 'Oswald', sans-serif;
