add price list to huawei mate

--- a/templates/cennik-huawei.html
+++ b/templates/cennik-huawei.html
@@ -3,7 +3,26 @@
 {% block content %}
 <h1 class="h1-titles mb-3">HUAWEI</h1>
 
+<div class="container">
+    <div class="row">
 
+        <div class="col-sm-3">
+            <p><a class="btn btn-outline-dark btn-lg" href="/h-seria-mate">SERIA <strong>MATE</strong></a></p>
+        </div>
+
+        <div class="col-sm-3">
+            <p><a class="btn btn-outline-dark btn-lg" href="/h-seria-p">SERIA <strong>P</strong></a></p>
+        </div>
+
+        <div class="col-sm-3">
+            <p><a class="btn btn-outline-dark btn-lg" href="/h-seria-y">SERIA <strong>Y</strong></a></p>
+        </div>
+
+        <div class="col-sm-3">
+            <p><a class="btn btn-outline-dark btn-lg" href="/h-seria-honor">SERIA <strong>HONOR</strong></a></p>
+        </div>
+    </div>
+</div>
 
 
 <!-- FOOTER -->
