--- a/static/css/titles.css
+++ b/static/css/titles.css
@@ -54,6 +54,14 @@
     padding: 3px;
 }
 
+.h5-titles-shadow {
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    padding: 3px;
+    text-shadow: rgb(153, 255, 0) 2px 2px 2px;
+}
+
 .p-par {
     font-family: 'Oswald', sans-serif;
     text-align: justify;
