--- a/templates/cennik-huawei-mate.html
+++ b/templates/cennik-huawei-mate.html
@@ -1,7 +1,10 @@
 {% extends "pl_layout.html" %}
 
 {% block content %}
-<h1 class="h1-titles mb-3">HUAWEI - SERIA MATE</h1>
+<h1 class="h1-titles mb-3"><img src="/static/images/main_page/logo/huawei.png" style="height: 50px"> SERIA MATE <img
+        src="/static/images/main_page/logo/huawei.png" style="height: 50px"></h1>
+
+<br>
 
 <div class="container">
     <div class="row">
@@ -9,7 +12,8 @@
         <!-- WYMIANA SZYBY -->
         <div class="col-sm-2">
 
-            <img type="button" src="static/images/price_list/broken-smartphone.png" data-toggle="modal"
+            <img type="button" src="static/images/price_list/broken-cracked-phone-screen.png" style="height: 50%"
+                 data-toggle="modal"
                  data-target="#wymianaSzyby">
             <h5 class="h5-titles-shadow">WYMIANA SZYBY</h5>
 
@@ -20,7 +24,8 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel1"><img
-                                    src="static/images/price_list/broken-smartphone.png" style="height: 20px"> SERIA
+                                    src="static/images/price_list/broken-cracked-phone-screen.png" style="height: 20px">
+                                SERIA
                                 MATE - WYMIANA SZYBY</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
@@ -97,12 +102,14 @@
         <!-- WYMIANA WYŚWIETLACZA -->
         <div class="col-sm-2">
 
-            <img type="button" src="static/images/price_list/broken-smartphone.png" data-toggle="modal"
+            <img type="button" src="static/images/price_list/broken-smartphone.png" style="height: 50%"
+                 data-toggle="modal"
                  data-target="#wymianaWyswietlacza">
             <h5 class="h5-titles-shadow">WYMIANA WYŚWIETLACZA</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaWyswietlacza" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2"
+            <div class="modal fade" id="wymianaWyswietlacza" tabindex="-1" role="dialog"
+                 aria-labelledby="exampleModalLabel2"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -185,18 +192,21 @@
         <!-- WYMIANA TYLNEJ KLAPKI -->
         <div class="col-sm-2">
 
-            <img type="button" src="static/images/price_list/broken-smartphone.png" data-toggle="modal"
+            <img type="button" src="static/images/price_list/broken-back-smartphone.png" style="height: 50%"
+                 data-toggle="modal"
                  data-target="#wymianaTylnejKlapki">
             <h5 class="h5-titles-shadow">WYMIANA TYLNEJ KLAPKI</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaTylnejKlapki" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel3"
+            <div class="modal fade" id="wymianaTylnejKlapki" tabindex="-1" role="dialog"
+                 aria-labelledby="exampleModalLabel3"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel3"><img
-                                    src="static/images/price_list/broken-smartphone.png" style="height: 20px"> SERIA
+                                    src="static/images/price_list/broken-back-smartphone.png" style="height: 20px">
+                                SERIA
                                 MATE - WYMIANA TYLNEJ KLAPKI</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
@@ -270,10 +280,11 @@
             </div>
         </div>
 
-         <!-- WYMIANA BATERII -->
+        <!-- WYMIANA BATERII -->
         <div class="col-sm-2">
 
-            <img type="button" src="static/images/price_list/broken-smartphone.png" data-toggle="modal"
+            <img type="button" src="static/images/price_list/battery-smartphone.png" style="height: 50%"
+                 data-toggle="modal"
                  data-target="#wymianaBaterii">
             <h5 class="h5-titles-shadow">WYMIANA BATERII</h5>
 
@@ -284,7 +295,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel4"><img
-                                    src="static/images/price_list/broken-smartphone.png" style="height: 20px"> SERIA
+                                    src="static/images/price_list/battery-smartphone.png" style="height: 20px"> SERIA
                                 MATE - WYMIANA BATERII</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
@@ -358,21 +369,24 @@
             </div>
         </div>
 
-         <!-- WYMIANA PORTU ŁADOWANIA -->
+        <!-- WYMIANA PORTU ŁADOWANIA -->
         <div class="col-sm-2">
 
-            <img type="button" src="static/images/price_list/broken-smartphone.png" data-toggle="modal"
+            <img type="button" src="static/images/price_list/battery-port-smartphone.png" style="height: 50%"
+                 data-toggle="modal"
                  data-target="#wymianaPortuLadowania">
             <h5 class="h5-titles-shadow">WYMIANA PORTU ŁADOWANIA</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaPortuLadowania" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel5"
+            <div class="modal fade" id="wymianaPortuLadowania" tabindex="-1" role="dialog"
+                 aria-labelledby="exampleModalLabel5"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel5"><img
-                                    src="static/images/price_list/broken-smartphone.png" style="height: 20px"> SERIA
+                                    src="static/images/price_list/battery-port-smartphone.png" style="height: 20px">
+                                SERIA
                                 MATE - WYMIANA BATERII</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
@@ -449,18 +463,20 @@
         <!-- WYMIANA GŁOŚNIKA -->
         <div class="col-sm-2">
 
-            <img type="button" src="static/images/price_list/broken-smartphone.png" data-toggle="modal"
+            <img type="button" src="static/images/price_list/speaker-smartphone.png" style="height: 50%"
+                 data-toggle="modal"
                  data-target="#wymianaGlosnika">
             <h5 class="h5-titles-shadow">WYMIANA GŁOŚNIKA</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaGlosnika" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel6"
+            <div class="modal fade" id="wymianaGlosnika" tabindex="-1" role="dialog"
+                 aria-labelledby="exampleModalLabel6"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel6"><img
-                                    src="static/images/price_list/broken-smartphone.png" style="height: 20px"> SERIA
+                                    src="static/images/price_list/speaker-smartphone.png" style="height: 20px"> SERIA
                                 MATE - WYMIANA GŁOŚNIKA</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
