--- a/templates/cennik-huawei-mate.html
+++ b/templates/cennik-huawei-mate.html
@@ -546,7 +546,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                           <table class="table table-sm table-hover">
+                            <table class="table table-sm table-hover">
                                 <thead>
                                 <tr>
                                     <th>MODEL</th>
@@ -779,6 +779,9 @@
         </div>
 
     </div>
+
+    <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 3s" href="/cennik-huawei">WSZYSTKIE
+        SERIE</a></h5>
 
 </div>
 
