--- a/templates/cennik-huawei.html
+++ b/templates/cennik-huawei.html
@@ -22,6 +22,11 @@
             <p><a class="btn btn-outline-dark btn-lg" href="/h-seria-honor">SERIA <strong>HONOR</strong></a></p>
         </div>
     </div>
+
+    <br>
+    <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 2s" href="/cennik">INNE
+        MARKI</a></h5>
+
 </div>
 
 
