--- a/templates/cennik-pozostale.html
+++ b/templates/cennik-pozostale.html
@@ -7,11 +7,11 @@
     <div class="row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
-            <p>Nie znalazłeś swojego modelu lub wyceny usterki?  <h5><a
-                class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 3s"
-                href="mailto:kontakt@diphone.pl" class="tel-mail">
-            Skontaktuj się z nami już teraz!</a></h5> Wyślij wiadomość z modelem i opisem
-            usterki! Odpowiadamy błyskawicznie!</p>
+            <p>Nie znalazłeś swojego telefonu lub wyceny usterki?</p>
+            <p>Wyślij wiadomość z modelem i opisem usterki! Odpowiadamy błyskawicznie!</p>
+            <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 3s"
+                   href="mailto:kontakt@diphone.pl" class="tel-mail">Skontaktuj się z nami już teraz!</a></h5>
+
         </div>
 
 
