--- a/templates/cennik.html
+++ b/templates/cennik.html
@@ -52,7 +52,10 @@
 
         <div class="row">
             <div class="col-sm-12">
-                <h4 class="h4-titles-shadow"><a href="/cennik-pozostale" style="color: #0b0c10">INNE MODELE</a></h4>
+                <br>
+                <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 2s"
+                       href="/cennik-pozostale">Brakuje marki Twojego telefonu? KLIKNIJ !</a></h5>
+
             </div>
         </div>
     </div>
