--- a/templates/cennik-huawei.html
+++ b/templates/cennik-huawei.html
@@ -6,21 +6,30 @@
 <div class="container">
     <div class="row">
 
-        <div class="col-sm-3">
-            <p><a class="btn btn-outline-dark btn-lg" href="/h-seria-mate">SERIA <strong>MATE</strong></a></p>
+        <div class="col-sm-2">
+            <p><a class="btn btn-outline-dark btn-sm" href="/h-seria-mate">SERIA <strong>MATE</strong></a></p>
         </div>
 
-        <div class="col-sm-3">
-            <p><a class="btn btn-outline-dark btn-lg" href="/h-seria-p">SERIA <strong>P</strong></a></p>
+        <div class="col-sm-2">
+            <p><a class="btn btn-outline-dark btn-sm" href="/h-seria-p">SERIA <strong>P</strong></a></p>
         </div>
 
-        <div class="col-sm-3">
-            <p><a class="btn btn-outline-dark btn-lg" href="/h-seria-y">SERIA <strong>Y</strong></a></p>
+        <div class="col-sm-2">
+            <p><a class="btn btn-outline-dark btn-sm" href="/h-seria-nova">SERIA <strong>NOVA</strong></a></p>
         </div>
 
-        <div class="col-sm-3">
-            <p><a class="btn btn-outline-dark btn-lg" href="/h-seria-honor">SERIA <strong>HONOR</strong></a></p>
+        <div class="col-sm-2">
+            <p><a class="btn btn-outline-dark btn-sm" href="/h-seria-g">SERIA <strong>G</strong></a></p>
         </div>
+
+        <div class="col-sm-2">
+            <p><a class="btn btn-outline-dark btn-sm" href="/h-seria-y">SERIA <strong>Y</strong></a></p>
+        </div>
+
+        <div class="col-sm-2">
+            <p><a class="btn btn-outline-dark btn-sm" href="/h-seria-honor">SERIA <strong>HONOR</strong></a></p>
+        </div>
+
     </div>
 
     <br>
