--- a/templates/cennik-huawei.html
+++ b/templates/cennik-huawei.html
@@ -5,6 +5,7 @@
 
 <div class="container">
     <div class="row">
+        <div class="col-sm-1"></div>
 
         <div class="col-sm-2">
             <p><a class="btn btn-outline-dark btn-sm" href="/h-seria-mate">SERIA <strong>MATE</strong></a></p>
@@ -19,10 +20,6 @@
         </div>
 
         <div class="col-sm-2">
-            <p><a class="btn btn-outline-dark btn-sm" href="/h-seria-g">SERIA <strong>G</strong></a></p>
-        </div>
-
-        <div class="col-sm-2">
             <p><a class="btn btn-outline-dark btn-sm" href="/h-seria-y">SERIA <strong>Y</strong></a></p>
         </div>
 
@@ -30,6 +27,7 @@
             <p><a class="btn btn-outline-dark btn-sm" href="/h-seria-honor">SERIA <strong>HONOR</strong></a></p>
         </div>
 
+        <div class="col-sm-1"></div>
     </div>
 
     <br>
