--- a/templates/cennik-huawei-mate.html
+++ b/templates/cennik-huawei-mate.html
@@ -540,7 +540,7 @@
                             <h5 class="modal-title" id="exampleModalLabel5"><img
                                     src="static/images/price_list/battery-port-smartphone.png" style="height: 20px">
                                 SERIA
-                                MATE - WYMIANA BATERII</h5>
+                                MATE - WYMIANA PORTU ŁADOWANIA</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
