--- a/templates/cennik-huawei-p.html
+++ b/templates/cennik-huawei-p.html
@@ -872,7 +872,7 @@
                             <h5 class="modal-title" id="exampleModalLabel5"><img
                                     src="static/images/price_list/battery-port-smartphone.png" style="height: 20px">
                                 SERIA
-                                P - WYMIANA BATERII</h5>
+                                P - WYMIANA PORTU ŁADOWANIA</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
