add base to list price to samsung

--- a/templates/cennik-samsung.html
+++ b/templates/cennik-samsung.html
@@ -3,7 +3,38 @@
 {% block content %}
 <h1 class="h1-titles mb-3">SAMSUNG</h1>
 
+<div class="container">
+    <div class="row">
+        <div class="col-sm-1"></div>
 
+        <div class="col-sm-2">
+            <p><a class="btn btn-outline-dark btn-sm" href="/s-seria-a">SERIA <strong>GALAXY A</strong></a></p>
+        </div>
+
+        <div class="col-sm-2">
+            <p><a class="btn btn-outline-dark btn-sm" href="/s-seria-m">SERIA <strong>GALAXY M</strong></a></p>
+        </div>
+
+        <div class="col-sm-2">
+            <p><a class="btn btn-outline-dark btn-sm" href="/s-seria-s">SERIA <strong>GALAXY S</strong></a></p>
+        </div>
+
+        <div class="col-sm-2">
+            <p><a class="btn btn-outline-dark btn-sm" href="/s-seria-z">SERIA <strong>GALAXY Z</strong></a></p>
+        </div>
+
+        <div class="col-sm-2">
+            <p><a class="btn btn-outline-dark btn-sm" href="/s-seria-note">SERIA <strong> NOTE</strong></a></p>
+        </div>
+
+        <div class="col-sm-1"></div>
+    </div>
+
+    <br>
+    <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 2s" href="/cennik">INNE
+        MARKI</a></h5>
+
+</div>
 
 
 <!-- FOOTER -->
