--- a/templates/cennik-samsung.html
+++ b/templates/cennik-samsung.html
@@ -5,10 +5,13 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-sm-1"></div>
 
         <div class="col-sm-2">
             <p><a class="btn btn-outline-dark btn-sm" href="/s-seria-a">SERIA <strong>GALAXY A</strong></a></p>
+        </div>
+
+        <div class="col-sm-2">
+            <p><a class="btn btn-outline-dark btn-sm" href="/s-seria-j">SERIA <strong>GALAXY J</strong></a></p>
         </div>
 
         <div class="col-sm-2">
@@ -27,7 +30,6 @@
             <p><a class="btn btn-outline-dark btn-sm" href="/s-seria-note">SERIA <strong> NOTE</strong></a></p>
         </div>
 
-        <div class="col-sm-1"></div>
     </div>
 
     <br>
