--- a/templates/cennik-samsung-j.html
+++ b/templates/cennik-samsung-j.html
@@ -209,7 +209,7 @@
                         <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel2"><img
                                     src="static/images/price_list/broken-smartphone.png" style="height: 20px"> SERIA
-                                P - WYMIANA WYŚWIETLACZA</h5>
+                                J - WYMIANA WYŚWIETLACZA</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -391,7 +391,7 @@
                             <h5 class="modal-title" id="exampleModalLabel3"><img
                                     src="static/images/price_list/broken-back-smartphone.png" style="height: 20px">
                                 SERIA
-                                P - WYMIANA TYLNEJ KLAPKI</h5>
+                                J - WYMIANA TYLNEJ KLAPKI</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -571,7 +571,7 @@
                         <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel4"><img
                                     src="static/images/price_list/battery-smartphone.png" style="height: 20px"> SERIA
-                                P - WYMIANA BATERII</h5>
+                                J - WYMIANA BATERII</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -753,7 +753,7 @@
                             <h5 class="modal-title" id="exampleModalLabel5"><img
                                     src="static/images/price_list/battery-port-smartphone.png" style="height: 20px">
                                 SERIA
-                                P - WYMIANA PORTU ŁADOWANIA</h5>
+                                J - WYMIANA PORTU ŁADOWANIA</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -934,7 +934,7 @@
                         <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel6"><img
                                     src="static/images/price_list/speaker-smartphone.png" style="height: 20px"> SERIA
-                                P - WYMIANA GŁOŚNIKA</h5>
+                                J - WYMIANA GŁOŚNIKA</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
