--- a/templates/cennik-samsung-a.html
+++ b/templates/cennik-samsung-a.html
@@ -160,7 +160,7 @@
                         <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel2"><img
                                     src="static/images/price_list/broken-smartphone.png" style="height: 20px"> SERIA
-                                P - WYMIANA WYŚWIETLACZA</h5>
+                                A - WYMIANA WYŚWIETLACZA</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -294,7 +294,7 @@
                             <h5 class="modal-title" id="exampleModalLabel3"><img
                                     src="static/images/price_list/broken-back-smartphone.png" style="height: 20px">
                                 SERIA
-                                P - WYMIANA TYLNEJ KLAPKI</h5>
+                                A - WYMIANA TYLNEJ KLAPKI</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -426,7 +426,7 @@
                         <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel4"><img
                                     src="static/images/price_list/battery-smartphone.png" style="height: 20px"> SERIA
-                                P - WYMIANA BATERII</h5>
+                                A - WYMIANA BATERII</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -560,7 +560,7 @@
                             <h5 class="modal-title" id="exampleModalLabel5"><img
                                     src="static/images/price_list/battery-port-smartphone.png" style="height: 20px">
                                 SERIA
-                                P - WYMIANA PORTU ŁADOWANIA</h5>
+                                A - WYMIANA PORTU ŁADOWANIA</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -693,7 +693,7 @@
                         <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel6"><img
                                     src="static/images/price_list/speaker-smartphone.png" style="height: 20px"> SERIA
-                                P - WYMIANA GŁOŚNIKA</h5>
+                                A - WYMIANA GŁOŚNIKA</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
