--- a/templates/pl_layout.html
+++ b/templates/pl_layout.html
@@ -100,10 +100,10 @@
                     <a class="nav-link" href="#">SKUP</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">NAPRAWA</a>
+                    <a class="nav-link" href="#">SERWIS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">SPRZEDAŻ</a>
+                    <a class="nav-link" href="/sprzedaz">SPRZEDAŻ</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/kontakt">KONTAKT</a>
