--- a/templates/kontakt.html
+++ b/templates/kontakt.html
@@ -88,7 +88,7 @@
                 <img class="animate__animated animate__zoomInRight" style="animation-delay: 1500ms"
                      src="/static/images/contact_us/real-estate.png">
                 <p class="p-par-contact"><strong>ADRES FIRMY</strong><br>
-                    ul. Hetmańska 59, 05-120 Legionowo
+                    ul. Hetmańska 59<br>05-120 Legionowo
                 </p>
             </div>
 
