--- a/templates/cennik-iphone.html
+++ b/templates/cennik-iphone.html
@@ -214,7 +214,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                             <table class="table table-sm table-hover">
+                            <table class="table table-sm table-hover">
                                 <thead>
                                 <tr>
                                     <th>MODEL</th>
@@ -395,7 +395,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                             <table class="table table-sm table-hover">
+                            <table class="table table-sm table-hover">
                                 <thead>
                                 <tr>
                                     <th>MODEL</th>
@@ -575,7 +575,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                             <table class="table table-sm table-hover">
+                            <table class="table table-sm table-hover">
                                 <thead>
                                 <tr>
                                     <th>MODEL</th>
@@ -756,7 +756,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                             <table class="table table-sm table-hover">
+                            <table class="table table-sm table-hover">
                                 <thead>
                                 <tr>
                                     <th>MODEL</th>
@@ -937,7 +937,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                             <table class="table table-sm table-hover">
+                            <table class="table table-sm table-hover">
                                 <thead>
                                 <tr>
                                     <th>MODEL</th>
@@ -1096,11 +1096,10 @@
 
     </div>
 
-    <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 3s" href="/cennik-samsung">WSZYSTKIE
-        SERIE</a></h5>
 
 </div>
-
+<h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 2s" href="/cennik">INNE
+    MARKI</a></h5>
 
 <!-- FOOTER -->
 <footer>
