--- a/templates/pl_layout.html
+++ b/templates/pl_layout.html
@@ -97,7 +97,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">SKUP</a>
+                    <a class="nav-link" href="/skup">SKUP</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">SERWIS</a>
