--- a/templates/skup.html
+++ b/templates/skup.html
@@ -7,9 +7,30 @@
 
 <div class="container">
     <div class="row">
+        <p>Chcesz sprzedać swój smartfon? Męczy Cię wystawianie ogłoszeń w internecie? Nie zwlekaj! Napisz do Nas!
+            Zapewniamy fachową obsługę oraz bezpieczeństwo transakcji. Pieniądze otrzymasz od ręki!</p>
+    </div>
 
+    <div class="row">
+
+        <div class="col-sm-4">
+            <h2 class="h2-titles-shadow">SPRAWNIE</h2>
+            <p>Sprzedać i zapomnieć? Jasna sprawa. Smartfony wyceniamy na miejscu, a pieniądze otrzymasz od ręki.</p>
+        </div>
+
+        <div class="col-sm-4">
+            <h2 class="h2-titles-shadow">BEZPIECZNIE</h2>
+            <p>Olx czy allegro? Możesz ale nie musisz. U nas będzie szybciej i bez rozczarowań!</p>
+        </div>
+
+        <div class="col-sm-4">
+            <h2 class="h2-titles-shadow">ŚWIETNA CENA</h2>
+            <p>Oczywiście, może mniej niż na Allegro- w końcu i my na tym zarabiamy. Ale uczciwie dla obu stron!</p>
+        </div>
 
     </div>
+
+</div>
 
 
 </div>
