--- a/templates/pl_layout.html
+++ b/templates/pl_layout.html
@@ -34,6 +34,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+
     <title>DiPHONE</title>
 </head>
 
@@ -83,10 +84,10 @@
                             <img class="animate__animated animate__zoomInRight"
                                  style="animation-delay: 400ms; height: 20px"
                                  src="/static/images/main_page/logo/xiaomi.png"></a>
-                        <a class="dropdown-item" href="/cennik-sony"">SONY
-                            <img class="animate__animated animate__zoomInRight"
-                                 style="animation-delay: 500ms; height: 20px"
-                                 src="/static/images/main_page/logo/sony.png"></a>
+                        <a class="dropdown-item" href="/cennik-sony">SONY
+                        <img class="animate__animated animate__zoomInRight"
+                             style="animation-delay: 500ms; height: 20px"
+                             src="/static/images/main_page/logo/sony.png"></a>
                         <a class="dropdown-item" href="/cennik-lg">LG
                             <img class="animate__animated animate__zoomInRight"
                                  style="animation-delay: 600ms; height: 20px"
@@ -100,7 +101,7 @@
                     <a class="nav-link" href="/skup">SKUP</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">SERWIS</a>
+                    <a class="nav-link" href="/serwis">SERWIS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/sprzedaz">SPRZEDAŻ</a>
