--- a/templates/skup.html
+++ b/templates/skup.html
@@ -28,6 +28,14 @@
             <p>Oczywiście, może mniej niż na Allegro- w końcu i my na tym zarabiamy. Ale uczciwie dla obu stron!</p>
         </div>
 
+        <div class="row">
+            <div class="col-sm-12">
+                <br>
+                <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 2s"
+                       href="/cennik-pozostale">NAPISZ DO NAS!</a></h5>
+                <br>
+            </div>
+        </div>
     </div>
 
 </div>
