--- a/templates/cennik-huawei-mate.html
+++ b/templates/cennik-huawei-mate.html
@@ -19,7 +19,7 @@
             <h5 class="h5-titles-shadow">WYMIANA SZYBY</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaSzyby" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1"
+            <div class="modal fade p-par" id="wymianaSzyby" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -147,7 +147,7 @@
             <h5 class="h5-titles-shadow">WYMIANA WYŚWIETLACZA</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaWyswietlacza" tabindex="-1" role="dialog"
+            <div class="modal fade p-par" id="wymianaWyswietlacza" tabindex="-1" role="dialog"
                  aria-labelledby="exampleModalLabel2"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -275,7 +275,7 @@
             <h5 class="h5-titles-shadow">WYMIANA TYLNEJ KLAPKI</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaTylnejKlapki" tabindex="-1" role="dialog"
+            <div class="modal fade p-par" id="wymianaTylnejKlapki" tabindex="-1" role="dialog"
                  aria-labelledby="exampleModalLabel3"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -404,7 +404,7 @@
             <h5 class="h5-titles-shadow">WYMIANA BATERII</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaBaterii" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel4"
+            <div class="modal fade p-par" id="wymianaBaterii" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel4"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -531,7 +531,7 @@
             <h5 class="h5-titles-shadow">WYMIANA PORTU ŁADOWANIA</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaPortuLadowania" tabindex="-1" role="dialog"
+            <div class="modal fade p-par" id="wymianaPortuLadowania" tabindex="-1" role="dialog"
                  aria-labelledby="exampleModalLabel5"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -660,7 +660,7 @@
             <h5 class="h5-titles-shadow">WYMIANA GŁOŚNIKA</h5>
 
             <!--  MODAL -->
-            <div class="modal fade" id="wymianaGlosnika" tabindex="-1" role="dialog"
+            <div class="modal fade p-par" id="wymianaGlosnika" tabindex="-1" role="dialog"
                  aria-labelledby="exampleModalLabel6"
                  aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -780,7 +780,7 @@
 
     </div>
 
-    <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 3s" href="/cennik-huawei">WSZYSTKIE
+    <h5 class="p-par-contact"><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 3s" href="/cennik-huawei">WSZYSTKIE
         SERIE</a></h5>
 
 </div>
