--- a/templates/cennik-huawei.html
+++ b/templates/cennik-huawei.html
@@ -8,30 +8,30 @@
         <div class="col-sm-1"></div>
 
         <div class="col-sm-2">
-            <p><a class="btn btn-outline-dark btn-sm" href="/h-seria-mate">SERIA <strong>MATE</strong></a></p>
+            <p class="p-par-contact"><a class="btn btn-outline-dark btn-sm" href="/h-seria-mate">SERIA <strong>MATE</strong></a></p>
         </div>
 
         <div class="col-sm-2">
-            <p><a class="btn btn-outline-dark btn-sm" href="/h-seria-p">SERIA <strong>P</strong></a></p>
+            <p class="p-par-contact"><a class="btn btn-outline-dark btn-sm" href="/h-seria-p">SERIA <strong>P</strong></a></p>
         </div>
 
         <div class="col-sm-2">
-            <p><a class="btn btn-outline-dark btn-sm" href="/h-seria-nova">SERIA <strong>NOVA</strong></a></p>
+            <p class="p-par-contact"><a class="btn btn-outline-dark btn-sm" href="/h-seria-nova">SERIA <strong>NOVA</strong></a></p>
         </div>
 
         <div class="col-sm-2">
-            <p><a class="btn btn-outline-dark btn-sm" href="/h-seria-y">SERIA <strong>Y</strong></a></p>
+            <p class="p-par-contact"><a class="btn btn-outline-dark btn-sm" href="/h-seria-y">SERIA <strong>Y</strong></a></p>
         </div>
 
         <div class="col-sm-2">
-            <p><a class="btn btn-outline-dark btn-sm" href="/h-seria-honor">SERIA <strong>HONOR</strong></a></p>
+            <p class="p-par-contact"><a class="btn btn-outline-dark btn-sm" href="/h-seria-honor">SERIA <strong>HONOR</strong></a></p>
         </div>
 
         <div class="col-sm-1"></div>
     </div>
 
     <br>
-    <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 2s" href="/cennik">INNE
+    <h5 class="p-par-contact"><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 2s" href="/cennik">INNE
         MARKI</a></h5>
 
 </div>
