--- a/templates/cennik.html
+++ b/templates/cennik.html
@@ -53,7 +53,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <br>
-                <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 2s"
+                <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat p-par" style="animation-delay: 2s"
                        href="/cennik-pozostale">Brakuje marki Twojego telefonu? KLIKNIJ !</a></h5>
 
             </div>
