--- a/templates/dla_firm.html
+++ b/templates/dla_firm.html
@@ -12,7 +12,7 @@
         </div>
 
         <div class="col-sm-4">
-            <p style="text-align: justify">
+            <p class="p-par" style="text-align: justify">
                 Firma <strong>DiPHONE</strong> zaprasza do współpracy Klientów Biznesowych i Przedstawicieli Sieci.
                 Skontaktuj się z Nami, by uzyskać informacje dotyczące napraw i cen skupu oraz konkurencyjne warunki
                 współpracy! Potrzebujesz sprzętu dla swojej Firmy? Wyjdziemy naprzeciw Twoim oczekiwaniom i potrzebom.
@@ -26,7 +26,7 @@
                 <img class="img-fluid" src="/static/images/for_company/fixed2.png">
             </div>
         </div>
-        <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat" style="animation-delay: 3s" href="kontakt">
+        <h5><a class="btn btn-outline-dark btn-lg animate__heartBeat p-par" style="animation-delay: 3s" href="kontakt">
             Skontaktuj się z nami już teraz!</a></h5>
     </div>
 
@@ -35,7 +35,7 @@
         <h2 class="h2-titles-shadow">CO NAS WYRÓŻNIA?</h2>
         <div class="col-sm-4">
             <h4 class="h4-titles">DOŚWIADCZENIE</h4>
-            <p style="text-align: justify">DiPHONE z sukcesem funkcjonuje na rynku od kilku lat.
+            <p class="p-par" style="text-align: justify">DiPHONE z sukcesem funkcjonuje na rynku od kilku lat.
                 Elektronika stanowi naszą wieloletnią pasję; przez lata, jeszcze przed założeniem firmy, poszerzaliśmy
                 wiedzę w jej zakresie i zdobywaliśmy umiejętności związane z naprawą telefonów i sprzedaży części
                 zamiennych. Powierzając Swój sprzęt w nasze ręce lub kupując go w naszym skupie, masz gwarancję
@@ -43,13 +43,13 @@
         </div>
         <div class="col-sm-4">
             <h4 class="h4-titles">RZETELNOŚĆ</h4>
-            <p style="text-align: justify">Zaufanie klienta chcemy zdobywać, oferując mu najwyższą jakość produktu w
+            <p class="p-par" style="text-align: justify">Zaufanie klienta chcemy zdobywać, oferując mu najwyższą jakość produktu w
                 możliwie jak najniższej cenie. Jeśli zauważysz jakąkolwiek nieprawidłowość w zakupionym sprzęcie,
                 możesz się z nami skontaktować w każdej chwili – naprawimy ją w natychmiastowym tempie.</p>
         </div>
         <div class="col-sm-4">
             <h4 class="h4-titles">KONKURENCYJNE CENY</h4>
-            <p style="text-align: justify">Warszawa to miasto, w którym znajdziesz sporo serwisów – jednak podstawą
+            <p class="p-par" style="text-align: justify">Warszawa to miasto, w którym znajdziesz sporo serwisów – jednak podstawą
                 naszej działalności są konkurencyjne ceny, dopasowane na każdą kieszeń. Firma, którą prowadzimy, stawia
                 sobie za priorytet uczciwość. Świadomi zawirowań na rynku, dbamy o to, by oferować naszym klientom
                 usługi na najwyższym poziomie jakościowym z adekwatną ceną. Każdego traktujemy indywidualnie!</p>
@@ -61,23 +61,23 @@
         <h2 class="h2-titles-shadow">CO OFERUJEMY?</h2>
         <div class="col-sm-3">
             <h5 class="h5-titles">SERWIS FLOTY</h5>
-            <p style="text-align: justify">Kompleksowa obsług dla firm w zakresie serwisu technicznego
+            <p class="p-par" style="text-align: justify">Kompleksowa obsług dla firm w zakresie serwisu technicznego
                 telefonów komórkowych. Posiadamy specjalistów, którzy realizują naprawy w trybie
                 ekspresowym.</p>
         </div>
         <div class="col-sm-3">
             <h5 class="h5-titles">DOOR-TO-DOOR</h5>
-            <p style="text-align: justify">Istnieje możliwość wykonania naprawy na odległość. Nasz kurier odbierze od
+            <p class="p-par" style="text-align: justify">Istnieje możliwość wykonania naprawy na odległość. Nasz kurier odbierze od
                 Ciebie przesyłkę z zabezpieczonym urządzeniem, a po naprawie dostarczy z powrotem.</p>
         </div>
         <div class="col-sm-3">
             <h5 class="h5-titles">INDYWIDUALNA WYCENA</h5>
-            <p style="text-align: justify">W przypadku klientów biznesowych istnieje możliwość indywidualnej wyceny. Aby
+            <p class="p-par" style="text-align: justify">W przypadku klientów biznesowych istnieje możliwość indywidualnej wyceny. Aby
                 dowiedzieć się o szczegółach prosimy o kontakt.</p>
         </div>
         <div class="col-sm-3">
             <h5 class="h5-titles">PRIORYTET ZLECEŃ</h5>
-            <p style="text-align: justify">Na życzenie możemy dokonać ekspresowej naprawy Twojego telefonu. Zapytaj o
+            <p class="p-par" style="text-align: justify">Na życzenie możemy dokonać ekspresowej naprawy Twojego telefonu. Zapytaj o
                 szczegóły telefonicznie lub w serwisie.</p>
         </div>
     </div>
